<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chinamobile.hejiaqin.business.ui.login.LoginActivity">

    <cn.bingoogolapple.bgabanner.BGABanner
        android:id="@+id/banner_splash_pager"
        style="@style/BannerDefaultStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:elevation="10dp"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="@dimen/big_font"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/login"
            android:textSize="@dimen/normal_font"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_enrol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/normal_font"
            android:text="@string/register"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
