<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/maincolor"
    tools:context=".business.ui.login.RegisterDetailActivity">

    <include layout="@layout/header_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_edit_row_height"
            android:layout_marginTop="@dimen/register_content_account_margin_top"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/account_edit_tx"
                android:layout_width="@dimen/login_register_edit_width"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:hint="@string/prompt_account"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="@dimen/normal_font"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/account_edit_tx"
                android:layout_marginLeft="@dimen/register_verify_code_margin_left"
                android:orientation="vertical"
                android:gravity="bottom">

                <Button
                    android:id="@+id/send_verify_code_button"
                    android:layout_width="@dimen/login_register_button_width"
                    android:layout_height="@dimen/login_register_button_height"
                    android:layout_marginBottom="@dimen/register_verify_code_margin_bottom"
                    android:text="@string/send_verify_code"
                    android:background="@drawable/selector_button_bg"
                    android:textSize="@dimen/verify_code_button_text_size"
                    android:textColor="@color/white"
                    android:gravity="center" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/login_register_edit_row_height"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom">

            <EditText
                android:id="@+id/verify_code_edit_tx"
                android:layout_width="@dimen/login_register_edit_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/prompt_verify_code"
                android:gravity="center"
                android:inputType="number"
                android:textSize="@dimen/normal_font"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/login_register_edit_row_height"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom">

            <EditText
                android:id="@+id/password_edit_tx"
                android:layout_width="@dimen/login_register_edit_width"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/normal_font"
                android:layout_gravity="center_horizontal"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/login_register_edit_row_height"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom">

            <EditText
                android:id="@+id/nickname_edit_tx"
                android:layout_width="@dimen/login_register_edit_width"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_nick_name"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="@dimen/normal_font"
                android:layout_gravity="center_horizontal"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/error_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/error_info_height"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_gravity="center"
            android:textColor="@color/error_info_text_color"
            android:textSize="@dimen/error_info_text_size"
            android:visibility="invisible"
            android:gravity="center" />

        <Button
            android:id="@+id/next_action_button"
            android:layout_width="@dimen/login_register_button_width"
            android:layout_height="@dimen/login_register_button_height"
            android:text="@string/action_next"
            android:gravity="center"
            android:textSize="@dimen/normal_font"
            android:textColor="@color/white"
            android:background="@drawable/selector_button_bg"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/register_content_bottom" />

    </LinearLayout>

</LinearLayout>