<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color_gray"
    android:orientation="vertical">

    <com.chinamobile.hejiaqin.business.ui.basic.view.HeaderView
        android:id="@+id/header_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/line_height"
        android:layout_marginTop="@dimen/header_title_margin"
        android:background="@color/white"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/about_kanxi_product_introduce"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/backgroud_color_gray"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/line_height"
        android:background="@color/white"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/about_kanxi_tel"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/backgroud_color_gray"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/line_height"
        android:background="@color/white"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/about_kanxi_email"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/backgroud_color_gray"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/line_height"
        android:background="@color/white"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/about_kanxi_version"
        android:textColor="@color/black" />

</LinearLayout>
