<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/maincolor"
    android:orientation="vertical"
    tools:context=".business.ui.login.UpdatePasswordActivity">

    <com.chinamobile.hejiaqin.business.ui.basic.view.HeaderView
        android:id="@+id/header_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_edit_row_height"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom">

            <EditText
                android:id="@+id/original_pwd_edit_tx"
                android:layout_width="@dimen/login_register_edit_width"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_original_password"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/normal_font"
                android:layout_gravity="center_horizontal"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_edit_row_height"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom">

            <EditText
                android:id="@+id/new_pwd_edit_tx"
                android:layout_width="@dimen/login_register_edit_width"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_new_password"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/normal_font"
                android:layout_gravity="center_horizontal"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_edit_row_height"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom">

            <EditText
                android:id="@+id/confirm_pwd_edit_tx"
                android:layout_width="@dimen/login_register_edit_width"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_confirm_password"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/normal_font"
                android:layout_gravity="center_horizontal"
                android:singleLine="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/error_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/error_info_height"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_gravity="center"
            android:textColor="@color/error_info_text_color"
            android:textSize="@dimen/error_info_text_size"
            android:visibility="invisible"
            android:gravity="center" />

        <Button
            android:id="@+id/submit_action_button"
            android:layout_width="@dimen/login_register_button_width"
            android:layout_height="@dimen/login_register_button_height"
            android:text="@string/reset_pwd_action_submit"
            android:gravity="center"
            android:textSize="@dimen/normal_font"
            android:textColor="@color/white"
            android:background="@drawable/selector_button_bg"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/register_content_bottom" />


    </LinearLayout>

</LinearLayout>